--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ h1 {
 	margin-bottom: 2em;
 	font-family: 'roboto';
 	font-weight: 500;
+	font-style: normal;
 	font-size: 4em;
 	color: white;
 	padding: 0em 4em 0em 1.8em;
