--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 *::after,
 *::before {
 	box-sizing: border-box;
+	font-family: Roboto, sans-serif !important;
 }
 
 /**********************/
@@ -12,14 +13,13 @@
 /**********************/
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
 body {
 	margin: 0;
 	background-color: var(--background);
 	cursor: none;
-	
 }
 
 html {
@@ -91,7 +91,6 @@ h2 {
 	color: white;
 	font-size: 3.5rem;
 	margin: 0;
-	
 }
 
 h3 {
@@ -101,7 +100,6 @@ h3 {
 	font-family: 'roboto';
 	font-size: 1.5em;
 	font-weight: 400;
-	
 }
 
 p {
@@ -111,7 +109,6 @@ p {
 	font-family: 'roboto';
 	font-weight: bold;
 	line-height: 1.1em;
-	
 }
 
 a {
@@ -151,7 +148,6 @@ nav a {
 	color: black;
 	margin: 0;
 	padding: 0em 8em 0em 5em;
-	font-style: normal;
 }
 
 #achtergrondNAV {
@@ -341,13 +337,11 @@ header img {
 	font-family: 'roboto';
 	font-weight: bold;
 	line-height: 1.1em;
-	
 }
 
 .passie {
 	font-family: 'Lora';
 	font-style: italic;
-font-weight: 700;
 	font-size: 6rem;
 	color: white;
 	padding: 0;
@@ -428,7 +422,6 @@ details[open] summary:after {
 	font-size: 1.5rem;
 	color: #ff2200;
 	font-weight: 500;
-	
 	list-style: none;
 	margin: 0;
 	padding: 1rem 0;
@@ -479,7 +472,6 @@ input[type=radio]:after {
 	display: inline;
 	font-size: 1.8rem;
 	font-family: 'roboto';
-	
 	font-weight:600;
 	color: #ff2200;
 }
@@ -582,7 +574,6 @@ ul.list {
 	border-radius: 4rem;
 	border: 2px solid#2b2b2b;
 	font-size: 1.2em;
-	font-style: normal;
 
 }
 
@@ -674,7 +665,7 @@ margin-bottom: 3em;
 	font-size: 1.5em;
 	font-weight: 400;
 	padding-right: 1em;
-	
+
 }
 
 .volgendeC {
@@ -852,7 +843,6 @@ margin-bottom: 3em;
 	margin: 2.4em 1em 1.2em 1em;
 	color:white;
 	font-size:3em;
-	
 }
 /*********/
 /*overmij*/
@@ -883,8 +873,6 @@ margin-bottom: 3em;
 .naam{
 	color:white;
 	font-size: 2em;
-	
-	font-weight: bold;
 	padding-left: 3.8em;
 	padding-top: 2em;
 }
@@ -931,7 +919,7 @@ a {
 	color: #ff2200;
 	font-size: 2em;
 	font-family: 'roboto';
-	
+	font-weight: normal;
 }
 
 footer img {
