--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+/**********************/
+/*font family's import*/
+/**********************/
+
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+
 /**************/
 /* CSS REMEDY */
 /**************/
@@ -5,21 +13,17 @@
 *::after,
 *::before {
 	box-sizing: border-box;
-	font-family: Roboto, sans-serif !important;
 }
 
-/**********************/
-/*font family's import*/
-/**********************/
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 
 
 body {
 	margin: 0;
 	background-color: var(--background);
 	cursor: none;
+	
 }
 
 html {
@@ -91,6 +95,7 @@ h2 {
 	color: white;
 	font-size: 3.5rem;
 	margin: 0;
+	font-style: normal;
 }
 
 h3 {
@@ -100,6 +105,7 @@ h3 {
 	font-family: 'roboto';
 	font-size: 1.5em;
 	font-weight: 400;
+	font-style: normal;
 }
 
 p {
@@ -109,6 +115,7 @@ p {
 	font-family: 'roboto';
 	font-weight: bold;
 	line-height: 1.1em;
+	font-style: normal;
 }
 
 a {
@@ -148,6 +155,7 @@ nav a {
 	color: black;
 	margin: 0;
 	padding: 0em 8em 0em 5em;
+	font-style: normal;
 }
 
 #achtergrondNAV {
@@ -337,11 +345,13 @@ header img {
 	font-family: 'roboto';
 	font-weight: bold;
 	line-height: 1.1em;
+	font-style: normal;
 }
 
-#passie {
+.passie {
 	font-family: 'Lora';
 	font-style: italic;
+	font-weight: 700;
 	font-size: 6rem;
 	color: white;
 	padding: 0;
@@ -422,6 +432,7 @@ details[open] summary:after {
 	font-size: 1.5rem;
 	color: #ff2200;
 	font-weight: 500;
+	font-style: normal;
 	list-style: none;
 	margin: 0;
 	padding: 1rem 0;
@@ -472,6 +483,7 @@ input[type=radio]:after {
 	display: inline;
 	font-size: 1.8rem;
 	font-family: 'roboto';
+	font-style: normal;
 	font-weight:600;
 	color: #ff2200;
 }
@@ -574,6 +586,7 @@ ul.list {
 	border-radius: 4rem;
 	border: 2px solid#2b2b2b;
 	font-size: 1.2em;
+	font-style: normal;
 
 }
 
@@ -665,7 +678,7 @@ margin-bottom: 3em;
 	font-size: 1.5em;
 	font-weight: 400;
 	padding-right: 1em;
-
+	font-style: normal;
 }
 
 .volgendeC {
@@ -675,7 +688,7 @@ margin-bottom: 3em;
 	color:#ff2200;
 	font-size:1.5em;
 	text-decoration:none;
-	
+	font-style: normal;
 }
 .schermenLLA{
 	columns:2;
@@ -843,6 +856,7 @@ margin-bottom: 3em;
 	margin: 2.4em 1em 1.2em 1em;
 	color:white;
 	font-size:3em;
+	font-style: normal;
 }
 /*********/
 /*overmij*/
@@ -873,6 +887,8 @@ margin-bottom: 3em;
 .naam{
 	color:white;
 	font-size: 2em;
+	font-style: normal;
+	font-weight: bold;
 	padding-left: 3.8em;
 	padding-top: 2em;
 }
