--- a/styles/style.css
+++ b/styles/style.css
@@ -348,7 +348,7 @@ header img {
 	font-style: normal;
 }
 
-#passie {
+.passie {
 	font-family: 'Lora';
 	font-style: italic;
 	font-weight: 700;
@@ -523,8 +523,7 @@ ul.list {
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
-	max-width: 100%;
-	padding: 5em 1em;
+	
 	height: 100vh;
 
 }
@@ -568,8 +567,9 @@ ul.list {
 .labels ul {
 	list-style-type: none;
 	padding: 0;
-	display: flex;
+	display:flex;
 	margin: 0.4em 0 0 0;
+	
 }
 
 .labels li {
@@ -891,6 +891,7 @@ margin-bottom: 3em;
 	font-weight: bold;
 	padding-left: 3.8em;
 	padding-top: 2em;
+	padding-right: 1em;
 }
 .Spin{
 	margin:2em 0 2em 3.8em;
@@ -990,13 +991,162 @@ footer li {
 #contactfooter {
 	font-size: 2em;
 }
+.sectionTekst {
+	height: 110vh;
+	
+}
+.sectionWerk-1 {
+	height:0;
+}
+.slide-img {
+	padding:3em 0 0 0;
+}
+.image {
+	width: 35em;
+}
+#image1 {
+	width:30em;
+}
+.caseDiv3 {
+	display:block;
+}
+.sunWoordlogo {
+	padding: 0 1em .5em 1em;
+}
+.schermen{
+	padding: 0 1em;
+	gap:1em;
+	margin-bottom: 1em;
+}
+.ZJBIMG {
+	gap: 1em 1em;
+	margin:  0 1em 1em;
+}
+.STTIMG {
+	gap: 1em 1em;
+	margin:  0 1em .5em;
+}
+.flexSTT{
+	padding: 0 1em 1em 1em;
+}
+.plogSchermen{
+margin-bottom: 1em;
+}
+.flex{
+	display: block;
+	padding: 0 1em;
+}
+.schermenLLA{
+	padding: 0 1em;
+	gap: 1em;
+}
+h1{
+	padding:0em 2em 0em 1.8em;
+	font-size:3em;
+}
+.OpDa {
+	display: block;
+	margin: 4em 5em 0 ;
+}
+.OpDaTekst {
+	margin-bottom: .4em;
+}
+.final {
+    margin: 2.4em 0em 1.2em .5em;
+}
+.foto2{
+	width:25em;
+}
+.naam{
+	padding-left: .8em;
+}
+.Spin{
+	margin-left: .8em;
+}
 }
 
 @media screen and (max-width: 820px) {
 	.werk {
 		display:inline-block;
 	}
+	.sectionTekst p {
+		font-size: 5em;
+	}
+	.passie {
+		font-size: 5rem;
+	}
+	#Afbeelding1 {
+		width: 13em;
+		height: auto;
+	}
+	#Afbeelding2 {
+		width: 16em;
+		height: auto;
+	}
+	.bottom-row img {
+		width: 38em;
+	}
+	.image {
+		width: 30em;
+	}
+	#image1 {
+		width:25em;
+	}
+	.scroll-section {
+		height: 100vh;
+	}
+	h3{
+		padding-left: 1em;
+	}
+	.caseDiv{
+		display: block;
+	}
+	.Pcase{
+		padding: .2em 1em 2em 1em;
+	}
+	.caseDiv2{
+		display: block;
+	}
+	.caseDiv2Overmij{
+		display: block;
+	}
+	h1{
+		padding:0em 1em 0em 0.5em;
+		font-size:3em;
+	}
+	.OpDa {
+		margin: 4em 1.8em 0 ;
+	}
+	.foto1{
+		padding: 0 3em 0 1em;
+	}
+	.foto2{
+		margin-left: 1em;
+	}
+}
+
+@media screen and (max-width: 640px) {
 	
+	.sectionTekst p {
+		font-size: 4.5em;
+	}
+	.passie {
+		font-size: 4.5rem;
+	}
+	#Afbeelding1 {
+		width: 11em;
+		height: auto;
+	}
+	#Afbeelding2 {
+		width: 14em;
+		height: auto;
+	}
+	.bottom-row img {
+		width: 34em;
+	}
+	.item {
+		padding: 0em 6em 0em 4em;
+	}
 }
 
 @media screen and (max-width: 570px) {
@@ -1023,8 +1173,43 @@ footer li {
 #contactfooter {
 	font-size: 1.8em;
 }
+.sectionTekst p {
+	font-size: 3.7em;
 }
-
+.passie {
+	font-size: 3.7rem;
+}
+#Afbeelding1 {
+	width: 9em;
+	height: auto;
+}
+#Afbeelding2 {
+	width: 12em;
+	height: auto;
+}
+.bottom-row img {
+	width: 26em;
+}
+.top-row {
+	gap: 3em;
+}
+.sectionTekst {
+	height: 90vh;
+}
+.item {
+	padding: 0em 4em 0em 2em;
+}
+h1{
+	padding:0em 1em 0em 0.7em;
+	font-size:2.5em;
+}
+.OpDaTekst {
+	font-size:1.5em;
+}
+.naam{
+	font-size:1.6em;
+}
+}
 @media screen and (max-width: 460px) {
 	.werk{
 		padding-top: 2em;
@@ -1051,6 +1236,101 @@ footer li {
 .kleiner{
 	font-size:1.1em;
 }
+.sectionTekst p {
+	font-size: 3em;
+}
+.passie {
+	font-size: 3rem;
+}
+#Afbeelding1 {
+	width: 9em;
+	height: auto;
+}
+#Afbeelding2 {
+	width: 8em;
+	height: auto;
+}
+.bottom-row img {
+	width: 22em;
+}
+.schermen{
+	columns:2;
+}
+.ZJBIMG {
+	gap: .5em .5em;
+}
+.STTIMG {
+	gap: .5em .5em;
+}
+.flexSTT{
+	padding: 0 1em .5em 1em;
+}
+h3{
+	font-size: 1.2em;
+}
+.Pcase{
+	font-size: 1.2em;
+}
+h1{
+	padding:0em 1em 0em 1em;
+	font-size:1.5em;
+}
+.OpDaTekst {
+	font-size:1em;
+}
+.foto2{
+	width:18em;
+}
+}
+
+@media screen and (max-width: 370px) {
+	.sectionTekst p {
+		font-size: 2.4em;
+	}
+	.passie {
+		font-size: 2.4rem;
+	}
+	#Afbeelding1 {
+		width: 6em;
+		height: auto;
+	}
+	#Afbeelding2 {
+		width: 6em;
+		height: auto;
+	}
+	.bottom-row img {
+		width: 16em;
+	}
+	.top-row {
+		gap: 2em;
+	}
+	.sectionTekst {
+		height: 70vh;
+	}
+	.item {
+		padding: 0em 1em 0em 1em;
+	}
+	.image {
+		width: 20em;
+	}
+	#image1 {
+		width:15em;
+	}
+	.scroll-section {
+		height: 80vh;
+	}
+	h3{
+		font-size: 1em;
+	}
+	.Pcase{
+		font-size: 1em;
+	}
+	.final {
+		font-size: 2em;
+	}
+	.naam{
+		font-size:1.2em;
+	}
 }
 
 @media screen and (max-width: 290px) {
